--- a/views/admin/ticketDetail.ejs
+++ b/views/admin/ticketDetail.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/head') %>
 <%- include('../partials/message') %>
 
-<div class="min-h-screen bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900 text-white">
+<div class="min-h-screen bg-gray-900 text-white">
     <%- include('../partials/nav') %>
 
     <main class="container mx-auto px-4 pt-24 pb-16">
